--- a/index.html
+++ b/index.html
@@ -140,26 +140,6 @@
         </svg>
       </div>
     </main>
-    <script>
-      var arrColors = ["#F9F0C1", "#C0ECCC", "#A5C8E4", "#F6A8A6"];
-      var currentColor = 0;
-      var nextColor = 1;
-
-      function updateDOMcolors() {
-        document.body.style.backgroundColor = arrColors[currentColor];
-        document.getElementById("circle").style.fill = arrColors[nextColor];
-      }
-
-      updateDOMcolors();
-
-      function handleClickOnColor() {
-        currentColor = nextColor;
-        nextColor = nextColor + 1;
-        if (nextColor === 4) {
-          nextColor = 0;
-        }
-        updateDOMcolors();
-      }
-    </script>
+    <script src="./colorPicker.js"></script>
   </body>
 </html>
