--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="About me page" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -25,7 +26,7 @@
       href="./favicon-16x16.png"
     />
     <meta name="theme-color" content="#8ecaa1" />
-    <title>About</title>
+    <title>pedenys</title>
   </head>
 
   <style>
@@ -113,18 +114,18 @@
           lang="fr"
           >Social sciences</a
         >
-        and then
+        then
         <a
           href="https://archinfo24.hypotheses.org/3262"
           rel="noopener noreferrer"
           target="_blank"
           lang="fr"
           >Digital Humanities</a
-        >, I became a JavaScript developer, while waiting for my next mutation.
+        >, I became a JavaScript developer, waiting for my next mutation.
       </p>
       <p>
-        I like continental philosophy, countryside, eating and pretty things
-        (not eating pretty things though).
+        I like continental philosophy, countryside, eating and beautiful things
+        (not eating beautiful things though).
       </p>
       <div id="circle-container" onclick="handleClickOnColor()">
         <svg height="45" width="50">
