Prevent text selection when clicking colorPicker

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       position: absolute;
       bottom: 3px;
       right: 6px;
+
+      user-select: none;
+      -moz-user-select: none;
+      -webkit-user-select: none;
     }
     @media screen and (max-width: 400px) {
       h1 {
