--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
       flex-direction: column;
       justify-content: center;
 
-      padding: 1rem;
       margin: 0 auto;
-      min-height: calc(100vh - 2rem);
+      padding: 0 2rem;
+
       max-width: 800px;
+      min-height:100vh;
     }
     h1,
     h2 {
@@ -98,10 +99,6 @@
       }
       p {
         font-size: 1.4rem;
-      }
-      main {
-        padding: 2rem;
-        min-height: calc(100vh - 4rem);
       }
     }
   </style>
