--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      min-height:90vh;
+      min-height:100vh;
+      min-height: -webkit-fill-available;
 
       margin: 0 auto;
       padding: 0 2rem;
