Fix full height with percentage

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <style>
     html {
       font-size: 62.5%;
+      height: 100%;
     }
     body {
       color: #333;
@@ -40,13 +41,14 @@
 
       margin: 0;
       padding: 0;
+
+      height: 100%;
     }
     main {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      min-height:100vh;
-      min-height: -webkit-fill-available;
+      min-height:100%;
 
       margin: 0 auto;
       padding: 0 2rem;
