--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   </head>
 
   <style>
+    :root {
+      --hoverColor: #007f00;
+    }
     html {
       font-size: 62.5%;
       height: 100%;
@@ -48,12 +51,12 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      min-height:100%;
+      min-height: 100%;
 
       margin: 0 auto;
       padding: 0 2rem;
 
-      max-width: 800px;      
+      max-width: 800px;
     }
     h1,
     h2 {
@@ -77,9 +80,19 @@
       font-weight: bold;
       color: black;
       text-decoration: none;
+      border-bottom: 1px solid black;
     }
     a:hover {
-      border-bottom: 1px solid black;
+      color: var(--hoverColor);
+      border-bottom: 1px solid var(--hoverColor);
+    }
+    li {
+      font-size: 1.6rem;
+      float: left;
+      list-style: square;
+    }
+    li:first-of-type {
+      margin-right: 4rem;
     }
     #circle-container {
       position: absolute;
@@ -114,7 +127,7 @@
           rel="noopener noreferrer"
           target="_blank"
           lang="fr"
-          >Social sciences</a
+          >Social Sciences</a
         >
         then
         <a
@@ -123,12 +136,17 @@
           target="_blank"
           lang="fr"
           >Digital Humanities</a
-        >, I became a JavaScript developer, waiting for my next mutation.
+        >, I became a JavaScript developer, waiting for the next mutation.
       </p>
       <p>
         I like continental philosophy, countryside, eating and beautiful things
         (not eating beautiful things though).
       </p>
+      <ul>
+        <li><a href="https://github.com/pedenys">GitHub</a></li>
+        <li><a href="https://twitter.com/_pedenys_">Twitter</a></li>
+      </ul>
+      <!-- Color switcher -->
       <div id="circle-container" onclick="handleClickOnColor()">
         <svg height="45" width="50">
           <circle
