Add english version and quotes pages

--- a/en/index.html
+++ b/en/index.html
@@ -120,35 +120,33 @@
   <body>
     <main>
       <h1>Pierre-Emmanuel Denys</h1>
-      <h2>Développeur.</h2>
+      <h2>Developer.</h2>
       <p>
-        Après quelques années passées dans les
+        After a few years spent in
         <a
           href="http://lepetitnietzsche.fr"
           rel="noopener noreferrer"
           target="_blank"
           lang="fr"
-          >Humanités</a
+          >Social Sciences</a
         >
-        et les
+        then
         <a
           href="https://archinfo24.hypotheses.org/3262"
           rel="noopener noreferrer"
           target="_blank"
           lang="fr"
-          >Humanités numériques</a
-        >, je suis devenu développeur TypeScript — en attendant la prochaine
-        mutation.
+          >Digital Humanities</a
+        >, I became a TypeScript developer, waiting for the next mutation.
       </p>
       <p>
-        J'aime la philosophie continentale, la campagne, manger et les belles
-        choses (mais pas manger de belles choses).
+        I like continental philosophy, countryside, eating and beautiful things
+        (not eating beautiful things though).
       </p>
       <ul>
         <li><a href="https://github.com/pedenys">GitHub</a></li>
-        <li><a href="https://twitter.com/_pedenys_">Twitter</a></li>
-        <li><a href="/quotes.html">Citations</a></li>
-        <li><a href="/en">🇬🇧</a></li>
+        <li><a href="https://twitter.com/_pedenys_">Twitter (FR)</a></li>
+        <li><a href="/">🇫🇷</a></li>
       </ul>
       <!-- Color switcher -->
       <div id="circle-container" onclick="handleClickOnColor()">
@@ -165,6 +163,6 @@
         </svg>
       </div>
     </main>
-    <script src="./colorPicker.js"></script>
+    <script src="../colorPicker.js"></script>
   </body>
 </html>
