chore: update quotes

--- a/quotes.html
+++ b/quotes.html
@@ -139,6 +139,12 @@
     <main>
       <figure>
         <blockquote>
+          <p>Puisqu’il le faut entraînons-nous à mourir à l’ombre des fleurs</p>
+        </blockquote>
+        <figcaption>Kobayashi Issa</figcaption>
+      </figure>
+      <figure>
+        <blockquote>
           <p>Ruhe, GröBe, Sonnenlicht [Calme, grandeur, soleil]</p>
         </blockquote>
         <figcaption>
