feat(home): update about

--- a/en/index.html
+++ b/en/index.html
@@ -137,7 +137,7 @@
           target="_blank"
           lang="fr"
           >Digital Humanities</a
-        >, I became a TypeScript developer, waiting for the next mutation.
+        >, I became a developer, waiting for the next mutation.
       </p>
       <p>
         I like continental philosophy, countryside, eating and beautiful things
