--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
           target="_blank"
           lang="fr"
           >Humanités numériques</a
-        >, je suis devenu développeur TypeScript — en attendant la prochaine
-        mutation.
+        >, je suis devenu développeur — en attendant la prochaine mutation.
       </p>
       <p>
         J'aime la philosophie continentale, la campagne, manger et les belles
